fix: add scrollbar-gutter

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,3 +4,9 @@
   --font-sans: var(--font-en-sans), var(--font-zh-sans);
   --font-mono: var(--mono);
 }
+
+@layer utilities {
+  .scrollbar-gutter-stable {
+    scrollbar-gutter: stable;
+  }
+}
